Gateway-application/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-app
  template:
    metadata:
      labels:
        app: gateway-app
    spec:
      containers:
        - name: gateway-container
          image: varuntej2480/gateway-svc:0.1 # or your-dockerhub-username/gateway-app:latest
          ports:
            - containerPort: 8000
