Gateway-application/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  type: NodePort
  selector:
    app: gateway-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
